# gnome-gpu-info

./: .editorconfig  .gitignore  Makefile.am  configure.ac
contrib/rg/: Makefile.am  realtime-graphs.h  rg-table.c  rg-table.h
data/: ggi.gresource.xml  org.gnome.gpu-info.policy.in
data/gtk/: menus.ui
data/ui/: window.ui
ggi/: _gi_composites.py  application.py  gpu.py  gpu_graph.py  gpu_intel.py  window.py
po/: POTFILES.in
